# chocolate_app

./: .env  Cargo.toml  README.md
migrations/: 20210921124451_up.sql
src/: main.rs
src/db/: mod.rs
src/models/: mod.rs
